--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -191,18 +191,12 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                             <div class="sweep-right"></div>
                     </div>
                     <!-- /.portfolio-img -->
-                    <div class='not-visible-little-screens'>
-                        <h3><a href="cartographie.html">La cartographie interactive</a></h3>
-                        <p>Plongez vos visiteurs dans votre univers</p>
-                        <a href="cartographie.html">Cliquez pour en savoir plus !</a>
-                    </div>
-                    <div class="sweep-right"></div>
                 </div>
                 <!-- /.col-md-3 -->
 
 
                 <div class="col-md-3 col-sm-6 col-xs-6">
-                    <div class="portfolio-img second" onClick="window.location.href='cartographie.html';">
+                    <div class="portfolio-img second" onClick="window.location.href='fidelisation.html';">
                             <img class="img-responsive" src="assets/images/fidelisation.jpg"
                                  alt="porftofilio thumbnail"/>
                             <div class="sweep-left"></div>
@@ -215,21 +209,15 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                                                 <i class="fa fa-eye" aria-hidden="true"></i>
                                             </a>
                                         </div>
-                                        <h3><a href="cartographie.html">Fidélisation client</a></h3>
+                                        <h3><a href="fidelisation.html">Fidélisation client</a></h3>
                                         <p>Mise en place d'outils de communication digitale</p>
-                                        <a href="cartographie.html">Cliquez pour en savoir plus !</a>
+                                        <a href="fidelisation.html">Cliquez pour en savoir plus !</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="sweep-right"></div>
                     </div>
                     <!-- /.portfolio-img -->
-                    <div class='not-visible-little-screens'>
-                        <h3><a href="cartographie.html">La cartographie interactive</a></h3>
-                        <p>Plongez vos visiteurs dans votre univers</p>
-                        <a href="cartographie.html">Cliquez pour en savoir plus !</a>
-                    </div>
-                    <div class="sweep-right"></div>
                 </div>
                 <!-- /.col-md-3 -->
 
@@ -248,24 +236,18 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                                     </div>
                                     <h3><a href="file-dattente.html">File d'attente numérique</a></h3>
                                     <p>La révolution de l'attente est en marche</p>
-                                    <a href="cartographie.html">Cliquez pour en savoir plus !</a>
+                                    <a href="file-dattente.html">Cliquez pour en savoir plus !</a>
                                 </div>
                             </div>
                         </div>
                         <div class="sweep-right"></div>
                     </div>
                     <!-- /.portfolio-img -->
-                    <div class='not-visible-little-screens'>
-                        <h3><a href="cartographie.html">La cartographie interactive</a></h3>
-                        <p>Plongez vos visiteurs dans votre univers</p>
-                        <a href="cartographie.html">Cliquez pour en savoir plus !</a>
-                    </div>
-                    <div class="sweep-right"></div>
                 </div>
                 <!-- /.col-md-3 -->
 
                 <div class="col-md-3 col-sm-6 col-xs-6">
-                    <div class="portfolio-img fourth" onClick="window.location.href='file-dattente.html';">
+                    <div class="portfolio-img fourth" onClick="window.location.href='communication.html';">
                         <img class="img-responsive" src="assets/images/com.jpg"
                              alt="porftofilio thumbnail">
                         <div class="sweep-left"></div>
@@ -277,20 +259,14 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                                             <i class="fa fa-eye" aria-hidden="true"></i>
                                         </a>
                                     </div>
-                                    <h3><a href="file-dattente.html">Communication éclair</a></h3>
+                                    <h3><a href="communication.html">Communication éclair</a></h3>
                                     <p>Notifiez vos clients sans frais</p>
-                                    <a href="cartographie.html">Cliquez pour en savoir plus !</a>
+                                    <a href="communication.html">Cliquez pour en savoir plus !</a>
                                 </div>
                             </div>
                         </div>
                         <div class="sweep-right"></div>
                         <!-- /.portfolio-img -->
-                        <div class='not-visible-little-screens'>
-                            <h3><a href="cartographie.html">La cartographie interactive</a></h3>
-                            <p>Plongez vos visiteurs dans votre univers</p>
-                            <a href="cartographie.html">Cliquez pour en savoir plus !</a>
-                        </div>
-                    <div class="sweep-right"></div>
                     </div>
                     <!-- /.portfolio-img -->
                 </div>
@@ -479,233 +455,14 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                 </div>
 
             </div>
-
-
           </div>
         </div>
+      <br><br>
             <!-- /.service-headline -->
-          <div class="service-2 wow fadeIn animated">
-            <div class="col-lg-12 service-content">
-
-              <div class="row">
-                <div class="col-sm-4"></div>
-                <div class="col-sm-2">
-                  <div class="text2">
-                   <p> Web experience </p>
-                  </div>
-                </div>
-                <div class="col-sm-2">
-                  <div class="text2">
-                   <p> User experience </p>
-                  </div>
-                </div>
-                <div class="col-sm-2">
-                  <div class="text2">
-                   <p> Business experience </p>
-                  </div>
-                </div>
-              </div>
-
-              <div class="row">
-                <div class="col-sm-4">
-                  <div class="text2">
-                  <p> Visibilité accrue </p>
-                  </div>
-                </div>
-                <div class="col-sm-2">
-                  <div class="icons-vert">
-                      <i class="material-icons">check</i>
-                  </div>
-                </div>
-                <div class="col-sm-2">
-                  <div class="icons-vert">
-                      <i class="material-icons">check</i>
-                  </div>
-                </div>
-                <div class="col-sm-2">
-                  <div class="icons-vert">
-                      <i class="material-icons">check</i>
-                  </div>
-                </div>
-              </div>
-
-              <div class="row">
-                <div class="col-sm-4">
-                  <div class="text2">
-                  <p> Référencement optimisé </p>
-                  </div>
-                </div>
-                <div class="col-sm-2">
-                  <div class="icons-vert">
-                      <i class="material-icons">check</i>
-                  </div>
-                </div>
-                <div class="col-sm-2">
-                  <div class="icons-vert">
-                      <i class="material-icons">check</i>
-                  </div>
-                </div>
-                <div class="col-sm-2">
-                  <div class="icons-vert">
-                      <i class="material-icons">check</i>
-                  </div>
-                </div>
-              </div>
-
-              <div class="row">
-                <div class="col-sm-4">
-                  <div class="text2">
-                  <p> Plateformes web multisupport </p>
-                  </div>
-                </div>
-                <div class="col-sm-2">
-                  <div class="icons-vert">
-                      <i class="material-icons">check</i>
-                  </div>
-                </div>
-                <div class="col-sm-2">
-                  <div class="icons-vert">
-                      <i class="material-icons">check</i>
-                  </div>
-                </div>
-                <div class="col-sm-2">
-                  <div class="icons-vert">
-                      <i class="material-icons">check</i>
-                  </div>
-                </div>
-              </div>
-
-              <div class="row">
-                <div class="col-sm-4">
-                  <div class="text2">
-                  <p> Application mobile adaptée </p>
-                  </div>
-                </div>
-                <div class="col-sm-2">
-                  <div class="icons-rouge">
-                      <i class="material-icons">close</i>
-                  </div>
-                </div>
-                <div class="col-sm-2">
-                  <div class="icons-vert">
-                      <i class="material-icons">check</i>
-                  </div>
-                </div>
-                <div class="col-sm-2">
-                  <div class="icons-vert">
-                      <i class="material-icons">check</i>
-                  </div>
-                </div>
-              </div>
-
-              <div class="row">
-                <div class="col-sm-4">
-                  <div class="text2">
-                  <p> Expérience utilisateur améliorée </p>
-                  </div>
-                </div>
-                <div class="col-sm-2">
-                  <div class="icons-rouge">
-                      <i class="material-icons">close</i>
-                  </div>
-                </div>
-                <div class="col-sm-2">
-                  <div class="icons-vert">
-                      <i class="material-icons">check</i>
-                  </div>
-                </div>
-                <div class="col-sm-2">
-                  <div class="icons-vert">
-                      <i class="material-icons">check</i>
-                  </div>
-                </div>
-              </div>
-
-              <div class="row">
-                <div class="col-sm-4">
-                  <div class="text2">
-                  <p> Fidélisation des clients </p>
-                  </div>
-                </div>
-                <div class="col-sm-2">
-                  <div class="icons-rouge">
-                      <i class="material-icons">close</i>
-                  </div>
-                </div>
-                <div class="col-sm-2">
-                  <div class="icons-rouge">
-                      <i class="material-icons">close</i>
-                  </div>
-                </div>
-                <div class="col-sm-2">
-                  <div class="icons-vert">
-                      <i class="material-icons">check</i>
-                  </div>
-                </div>
-              </div>
-
-              <div class="row">
-                <div class="col-sm-4">
-                  <div class="text2">
-                  <p> Données clients exploitées </p>
-                  </div>
-                </div>
-                <div class="col-sm-2">
-                  <div class="icons-rouge">
-                      <i class="material-icons">close</i>
-                  </div>
-                </div>
-                <div class="col-sm-2">
-                  <div class="icons-rouge">
-                      <i class="material-icons">close</i>
-                  </div>
-                </div>
-                <div class="col-sm-2">
-                  <div class="icons-vert">
-                      <i class="material-icons">check</i>
-                  </div>
-                </div>
-              </div>
-
-              <div class="row">
-                <div class="col-sm-4">
-                  <div class="text2">
-                  <p> Visualisation des prévisions </p>
-                  </div>
-                </div>
-                <div class="col-sm-2">
-                  <div class="icons-rouge">
-                      <i class="material-icons">close</i>
-                  </div>
-                </div>
-                <div class="col-sm-2">
-                  <div class="icons-rouge">
-                      <i class="material-icons">close</i>
-                  </div>
-                </div>
-                <div class="col-sm-2">
-                  <div class="icons-vert">
-                      <i class="material-icons">check</i>
-                  </div>
-                </div>
-              </div>
-              <br><br><br>
-
-
-
-            </div>
-
-            <!-- .service-content -->
-          </div>
           <div class="col-md-12 service-headline">
             <p class="wow fadeIn animated">
-              Pour toutes confections sur-mesure, <a class= "page-scroll" href="#contact">
-                contactez-nous
-                </a>
+              <a href="offres.html">Consulter ici</a> nos offres en détails
               </p>
-              <p>
-              Nous établierons ensemble votre stratégie digitale.
-            </p>
           </div>
 
         <!-- /.row -->
