--- a/particle_dark/fidelisation.html
+++ b/particle_dark/fidelisation.html
@@ -400,7 +400,7 @@
 
 <!-- Custom Particle Theme JavaScript -->
 <script>
-    var sentences = ["Fidélisez vos clients"];
+    var sentences = ["Comment nous fidélisons vos clients..."];
 </script>
 <script src="assets/js/custom/portfolio-item.js"></script>
 </body>
