modify menu link

--- a/particle_dark/offres.html
+++ b/particle_dark/offres.html
@@ -63,22 +63,22 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
     <nav id="st-main-nav">
         <ul>
             <li>
-                <a class="page-scroll hvr-underline-from-center" href="#page-top">Accueil</a>
+                <a class="page-scroll hvr-underline-from-center" href="index.html#page-top">Accueil</a>
             </li>
             <li>
-                <a class="page-scroll hvr-underline-from-center" href="#our-work">Une révolution</a>
+                <a class="page-scroll hvr-underline-from-center" href="index.html#our-work">Une révolution</a>
             </li>
             <li>
-                <a class="page-scroll hvr-underline-from-center" href="#about">Pourquoi vous ?</a>
+                <a class="page-scroll hvr-underline-from-center" href="index.html#about">Pourquoi vous</a>
             </li>
             <li>
-                <a class="page-scroll hvr-underline-from-center" href="#services">Notre travail</a>
+                <a class="page-scroll hvr-underline-from-center" href="index.html#services">Notre travail</a>
             </li>
             <li>
-                <a class="page-scroll hvr-underline-from-center" href="#skills">Nous choisir</a>
+                <a class="page-scroll hvr-underline-from-center" href="index.html#skills">Nous choisir</a>
             </li>
             <li>
-                <a class="page-scroll hvr-underline-from-center" href="#contact">Contactez-nous</a>
+                <a class="page-scroll hvr-underline-from-center" href="index.html#contact">Contactez-nous</a>
             </li>
         </ul>
     </nav>
