--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -328,7 +328,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             <div class="col-md-12 service-content">
                 <div class="left">
                     <br>
-                    <div class="service wow fadeIn animated">
+                    <div class="service" style="visibility: hidden;" id="service1">
                         <div class="text">
                             <h4>Responsive Design</h4>
                             <p>Outils adaptés à tous les supports.</p>
@@ -341,7 +341,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     <br>
                     <br>
                     <br>
-                    <div class="service wow fadeIn animated">
+                    <div class="service" style="visibility: hidden;" id="service2">
                         <div class="text">
                             <h4>Une visibilité améliorée</h4>
                             <p>Référencement naturel ou payant pour une notoriété améliorée.</p>
@@ -356,7 +356,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                 </div>
                 <div class="right">
                     <br>
-                    <div class="service-2 wow fadeIn animated">
+                    <div class="service-2" style="visibility: hidden;" id="service3">
                         <div class="icons">
                             <i class="material-icons">mood</i>
                         </div>
@@ -370,7 +370,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     </div>
                     <br>
                     <br>
-                    <div class="service-2 wow fadeIn animated">
+                    <div class="service-2" style="visibility: hidden;" id="service4">
                         <div class="icons">
                             <i class="material-icons">trending_up</i>
                         </div>
