--- a/particle_dark/fidelisation.html
+++ b/particle_dark/fidelisation.html
@@ -122,118 +122,53 @@
 
 <!-- About Us Section
 ================================================== -->
-<section id="about2" class="about-section">
-    <div class="container">
-
-        <div class="row">
-
-            <div class="col-lg-12">
-
-                <div class="about-text">
-                    <h2 class="wow fadeIn animated">Une expérience <span>renouvelée</span> pour vos clients</h2><br/><br/>
-                      <p class="wow fadeIn animated">
-                              Statistique constatée dans un parc d'attraction du nord de Paris :<br/>
-                      </p>
-                      <h3 class="wow fadeIn animated">
-                          <span class="minutes">13</span> minutes d'amusement pour <span class="minutes">95</span> minutes d'attente
-                      </h3>
-                    <br><br>
-                </div>
-                <!-- /.about-text -->
-            </div>
-            <!-- /.col-md-12 -->
-        </div>
-        <!-- /.row -->
-    </div>
-    <!-- /.container -->
-</section>
-<!-- /.about-section -->
-
- <!-- Image Section
-================================================== -->
-<section class="image-section filedattente" id="portfolio-details-file">
-    <div class="container">
-
-        <div class="row">
-
-            <div class="col-md-12">
-                <h2 class="wow fadeIn animated">
-                    <span>Augmentez votre chiffre d'affaires</span>
-                </h2>
-                <br><br>
-                <h3 class="wow fadeIn animated">
-                    Un <span>gain d'espace</span> lié à la <span>suppression</span> de l'attente physique
-                </h3>
-                <br>
-                <h3 class="wow fadeIn animated">
-                    Une <span>augmentation des consomations</span> dans les boutiques et restaurants
-                </h3>
-                <br>
-                <h3 class="wow fadeIn animated">
-                    Une <span>diminution des conflits</span> liés aux désaccords dans les files
-                </h3>
-                <br>
-                <h3 class="wow fadeIn animated">
-                    Une <span>sécurité renforcée</span> grâce à la diminution des attroupements
-                </h3>
-                <br>
-                <br>
-
-            </div>
-            <!-- /.col-md-12 -->
-        </div>
-        <!-- /.row -->
-    </div>
-    <!-- /.container -->
-</section>
-<!-- /.image section -->
-
-<section id="wedo" class="skills-section">
+<section id="service-details" class="services-section">
 
     <div class="container">
 
         <div class="row">
 
-            <div class="col-md-12">
-                <div class="skills-headline">
-                    <h2 class="wow fadeIn animated">
-                        <span>La solution ?</span>
-                    </h2>
-                    <br><br>
-                    <h3 class="wow fadeIn animated">
-                        Une application qui permet à <span>vos clients</span> de prendre un ticket et <span>d'attendre</span> en <span>faisant autre chose.</span>
-                    </h3>
-                    <h3 class="wow fadeIn animated">
-                        L'application avertit de <span>l'avancement de la file d'attente</span> et lorsque leur tour approche.
-                    </h3>
-                </div>
+            <div class="col-md-12 service-headline">
+                <h2 class="wow fadeIn animated"> Confiez nous <span> vos projet digitaux</span>,
+                  nous en ferons votre atout de communication</h2>
+
             </div>
-            <!-- /.col-md-12 -->
-        </div>
-    </div>
-</section>
-
-<!-- Services Section
-================================================== -->
-<section id="services-attente" class="services-section">
-
-    <div class="container-fluid">
-
-        <div class="row">
+            <!-- /.service-headline -->
 
             <div class="col-md-12 service-content">
+                <div class="service-image">
+                    <img src="assets/images/fidelisation-little.jpg" alt="iphone">
+                </div>
+                <div class="right">
+                    <div class="service-2 wow fadeIn animated">
+                        <div class="icons">
+                            <i class="material-icons">touch_app</i>
+                        </div>
+                        <div class="text">
+                            <h4>Nous concevons des plateforme immersive pour vos visiteurs</h4>
 
-                <div class="service-image">
-                    <img src="assets/images/iphone6_1.png" alt="iphone"> <br><br>
-                    <p>Une interface de prise de ticket directement sur votre site.</p>
-                </div>
-                <div class="service-image">
-                    <img src="assets/images/iphone6_2.png" alt="iphone"><br><br>
-                    <p>L'application avertit le client de l'avancement.</p>
-                </div>
-                <div class="service-image">
-                    <img src="assets/images/iphone6_3.png" alt="iphone"><br><br>
-                    <p>Le client est avertit lorsque que son approche.</p>
+                        </div>
+
+                    </div>
+                    <div class="service-2 wow fadeIn animated">
+                        <div class="icons">
+                            <i class="material-icons">important_devices</i>
+                        </div>
+                        <div class="text">
+                            <h4> Une expérience client améliorée vous apporte une meilleure attractivité </h4>
+
+                        </div>
+                    </div>
+
+                    <div class="service-2 wow fadeIn animated">
+                        <div class="icons">
+                            <i class="material-icons">mood</i>
+                        </div>
+                        <div class="text">
+                            <h4>Grace à notre savoir-faire, un client satisfait forme la solution majeure pour votre évolution</h4>
+
+                        </div>
+                    </div>
                 </div>
             </div>
             <!-- .service-content -->
@@ -243,6 +178,7 @@
     <!-- /.container -->
 </section>
 <!-- /.service-section -->
+
 
 <!-- Contact Section
 ================================================== -->
