--- a/particle_dark/fidelisation.html
+++ b/particle_dark/fidelisation.html
@@ -79,7 +79,7 @@
 
 <!-- Portfolio Item
 ================================================== -->
-<section class="portfolio2-item">
+<section class="portfolio-item" id="fidelisation">
     <div class="video-overlay"></div>
     <div class="container-fluid">
 
@@ -87,7 +87,7 @@
 
             <div class="col-lg-12">
 
-                <div class="portfolio2-headline">
+                <div class="portfolio-headline">
                     <div id="particles-js"></div>
 
                     <div class="container">
