--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -116,11 +116,6 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 </section>
 <!-- /.hero-section -->
 
-<!-- Image Section
-================================================== -->
-<section id="big-image" class="image-section"></section>
-<!-- /.image section -->
-
 <!-- About Us Section
 ================================================== -->
 <section id="three-points" class="about-section">
@@ -156,6 +151,11 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 </section>
 <!-- /.about-section -->
 
+<!-- Image Section
+================================================== -->
+<section id="big-image" class="image-section"></section>
+<!-- /.image section -->
+  
 <section id="our-work" class="our-work-section">
 
     <div class="container-fluid">
@@ -294,9 +294,9 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     <br>
                     <br>
                     <h3 class="wow fadeIn animated">
-                        "Ce qui est dangereux, c’est de <span>ne pas évoluer</span>."
+                        "Don’t be afraid to <span>get creative</span> and <span>experiment</span> with your marketing."
                     </h3>
-                    <p class="wow fadeIn animated">Jeff Bezos<span> - PDG d'Amazon </span></p>
+                    <p class="wow fadeIn animated">Mike Volpe</p>
                     <br>
                     <br>
                 </div>
@@ -318,10 +318,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
         <div class="row">
 
             <div class="col-md-12 service-headline">
-                <h2 class="wow fadeIn animated"> Nos forces à <span> votre service</span></h2>
-                <p class="wow fadeIn animated">
-                  Boostez votre chiffre d'affaires grâce au web.
-                </p>
+                <h2 class="wow fadeIn animated"><span>Notre expertise</span></h2>
             </div>
             <!-- /.service-headline -->
 
