--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -101,10 +101,11 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
             <div class="col-lg-12">
                 <div class="hero-logo">
+                    <img src="assets/images/logo-soluparcs-white.png" alt="logo">
                 </div>
                 <div class="typed-text">
                     <span class="skilltechtypetext">
-                        L'expérience digitale au coeur de votre métier
+                        Vivons des aventures digitales
                     </span>
                 </div>
             </div>
