--- a/particle_dark/cartographie.html
+++ b/particle_dark/cartographie.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Soluparcs - Editeur de solutions digitales pour les espaces de loisirs et culturels</title>
+    <title>Amuseo | Concepteurs d'expériences digitales pour parcs et musées</title>
 
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
