--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -103,9 +103,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     <img src="assets/images/logo-blanc-amuseo.png" alt="logo">
                 </div>
                 <div class="typed-text">
-                    <span class="skilltechtypetext">
-                        Vivons des aventures digitales
-                    </span>
+                    <span class="skilltechtypetext"></span>
                 </div>
             </div>
             <!-- /.col-lg-12 -->
@@ -649,10 +647,14 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
 <!-- JavaScript Libraries -->
 <script src="assets/js/libraries/jquery.easing.1.3.js"></script>
+<script src="assets/js/libraries/typed.js"></script>
 <script src="assets/js/libraries/wow.js"></script>
 <script src="assets/js/libraries/waypoint.js"></script>
 <script src="assets/js/libraries/jquery.counterup.js"></script>
 <!-- Custom Particle Theme JavaScript -->
+<script>
+    var sentences = ["Vivons des aventures digitales"];
+</script>
 <script src="assets/js/custom/particle-theme-light-yt.js"></script>
 </body>
 </html>
