finish 1st page

--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -105,6 +105,11 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                 <div class="typed-text">
                     <span class="skilltechtypetext"></span>
                 </div>
+                <div class="service-item-read-more">
+                        <a href="#three-points" class="arrow-down page-scroll">
+                            <i class="fa fa-angle-down bounce" aria-hidden="true"></i>
+                        </a>
+                </div>
             </div>
             <!-- /.col-lg-12 -->
         </div>
