--- a/particle_dark/communication.html
+++ b/particle_dark/communication.html
@@ -47,7 +47,7 @@
 <!-- Navigation Menu
 ================================================== -->
 <header>
-    <div id="st-logo"><a href="#0"><img src="assets/images/logo-soluparcs-white.png" alt="Logo"></a></div>
+    <div id="st-logo"><a href="#0"><img src="assets/images/logo-blanc-amuseo.png" alt="Logo"></a></div>
 </header>
 
 <div id="st-nav">
@@ -59,16 +59,16 @@
                 <a class="page-scroll hvr-underline-from-center" href="index.html#page-top">Accueil</a>
             </li>
             <li>
-                <a class="page-scroll hvr-underline-from-center" href="index.html#our-work">Une révolution</a>
+                <a class="page-scroll hvr-underline-from-center" href="index.html#three-points">Nous</a>
             </li>
             <li>
-                <a class="page-scroll hvr-underline-from-center" href="index.html#about">Pourquoi vous</a>
+                <a class="page-scroll hvr-underline-from-center" href="index.html#our-work">Une révolution</a>
             </li>
             <li>
                 <a class="page-scroll hvr-underline-from-center" href="index.html#services">Notre travail</a>
             </li>
             <li>
-                <a class="page-scroll hvr-underline-from-center" href="index.html#skills">Nous choisir</a>
+                <a class="page-scroll hvr-underline-from-center" href="index.html#offres">Nos offres</a>
             </li>
             <li>
                 <a class="page-scroll hvr-underline-from-center" href="index.html#contact">Contactez-nous</a>
