--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -65,16 +65,16 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                 <a class="page-scroll hvr-underline-from-center" href="#page-top">Accueil</a>
             </li>
             <li>
-                <a class="page-scroll hvr-underline-from-center" href="#our-work">Une révolution</a>
+                <a class="page-scroll hvr-underline-from-center" href="#three-points">Nous</a>
             </li>
             <li>
-                <a class="page-scroll hvr-underline-from-center" href="#about">Pourquoi vous ?</a>
+                <a class="page-scroll hvr-underline-from-center" href="#our-work">Une révolution</a>
             </li>
             <li>
                 <a class="page-scroll hvr-underline-from-center" href="#services">Notre travail</a>
             </li>
             <li>
-                <a class="page-scroll hvr-underline-from-center" href="#skills">Nous choisir</a>
+                <a class="page-scroll hvr-underline-from-center" href="#offres">Nos offres</a>
             </li>
             <li>
                 <a class="page-scroll hvr-underline-from-center" href="#contact">Contactez-nous</a>
@@ -166,7 +166,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
         <div class="row">
 
             <div class="col-md-12 see-work">
-                <h2 class="wow fadeInLeft animated">Fonctionnalités <span>sur-mesure</span> pour votre activité</h2>
+                <h2 class="wow fadeInLeft animated">Outils <span>sur-mesure</span> pour votre activité</h2>
             </div>
             <!-- /.see-work -->
 
@@ -398,7 +398,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
 <!-- Services Section
 ================================================== -->
-<section id="services" class="services-section">
+<section id="offres" class="services-section">
 
     <div class="container">
 
