--- a/particle_dark/offres.html
+++ b/particle_dark/offres.html
@@ -50,7 +50,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 <header style="background-color: #0c161e;">
     <div id="st-logo">
         <a href="#0">
-            <img src="assets/images/logo-soluparcs-white.png" alt="Logo">
+            <img src="assets/images/logo-blanc-amuseo.png" alt="Logo">
         </a>
     </div>
 </header>
@@ -66,16 +66,16 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                 <a class="page-scroll hvr-underline-from-center" href="index.html#page-top">Accueil</a>
             </li>
             <li>
-                <a class="page-scroll hvr-underline-from-center" href="index.html#our-work">Une révolution</a>
+                <a class="page-scroll hvr-underline-from-center" href="index.html#three-points">Nous</a>
             </li>
             <li>
-                <a class="page-scroll hvr-underline-from-center" href="index.html#about">Pourquoi vous</a>
+                <a class="page-scroll hvr-underline-from-center" href="index.html#our-work">Une révolution</a>
             </li>
             <li>
                 <a class="page-scroll hvr-underline-from-center" href="index.html#services">Notre travail</a>
             </li>
             <li>
-                <a class="page-scroll hvr-underline-from-center" href="index.html#skills">Nous choisir</a>
+                <a class="page-scroll hvr-underline-from-center" href="index.html#offres">Nos offres</a>
             </li>
             <li>
                 <a class="page-scroll hvr-underline-from-center" href="index.html#contact">Contactez-nous</a>
