--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -68,7 +68,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                 <a class="page-scroll hvr-underline-from-center" href="#three-points">Nous</a>
             </li>
             <li>
-                <a class="page-scroll hvr-underline-from-center" href="#our-work">Une révolution</a>
+                <a class="page-scroll hvr-underline-from-center" href="#our-work">Nos outils</a>
             </li>
             <li>
                 <a class="page-scroll hvr-underline-from-center" href="#services">Notre travail</a>
@@ -182,7 +182,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
                                         <div class="sweep-icon">
                                           <a href="cartographie.html">
-                                                <i class="fa fa-eye" aria-hidden="true"></i>
+                                                <i class="fa fa-location-arrow" aria-hidden="true"></i>
                                             </a>
                                         </div>
                                         <h3><a href="cartographie.html">Cartographie interactive</a></h3>
@@ -208,8 +208,8 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                                     <div class="sweep-content">
 
                                         <div class="sweep-icon">
-                                          <a href="cartographie.html">
-                                                <i class="fa fa-eye" aria-hidden="true"></i>
+                                          <a href="fidelisation.html">
+                                                <i class="fa fa-smile-o" aria-hidden="true"></i>
                                             </a>
                                         </div>
                                         <h3><a href="fidelisation.html">Fidélisation client</a></h3>
@@ -234,7 +234,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                                 <div class="sweep-content">
                                     <div class="sweep-icon">
                                         <a href="file-dattente.html">
-                                            <i class="fa fa-eye" aria-hidden="true"></i>
+                                            <i class="fa fa-mobile" aria-hidden="true"></i>
                                         </a>
                                     </div>
                                     <h3><a href="file-dattente.html">File d'attente numérique</a></h3>
@@ -258,8 +258,8 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                             <div class="sweep-layer">
                                 <div class="sweep-content">
                                     <div class="sweep-icon">
-                                        <a href="file-dattente.html">
-                                            <i class="fa fa-eye" aria-hidden="true"></i>
+                                        <a href="communication.html">
+                                            <i class="fa fa-bullhorn" aria-hidden="true"></i>
                                         </a>
                                     </div>
                                     <h3><a href="communication.html">Communication éclair</a></h3>
